--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,15 @@
 
 <h1>My Blog</h1>
 
-{{ posts }}
+{% for post in posts %}
+<div>
+    <p>published: {{ post.published_date }}</p>
+    <em>{{ post.genre }}</em>
+    <h1><a href="">{{ post.title }}</a></h1>
+    <p>{{ post.text|linebreaksbr }}</p>
+</div>
+
+{% endfor %}
 
   </body>
 </html>
