Second commit with more Jinja2

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -26,6 +26,7 @@
         <div class="post">
           <div class="date">
             <p>published: {{ post.published_date }}</p>
+            <p>genre: {{ post.genre }}</p>
           </div>
           <h1><a href="">{{ post.title }}</a></h1>
           <p>{{ post.text|linebreaksbr }}</p>
