--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -15,7 +15,10 @@
 
 <body>
     <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
+      {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+      {% endif %}
+        <h1><a href="{% url 'post_list' %}">Django Girls Blog</a></h1>
     </div>
     <div class="content container">
         <div class="row">
